--- a/static/layout.css
+++ b/static/layout.css
@@ -157,6 +157,7 @@ h1, h2 {
 .panel > .content {
 	top: 21px;
 	bottom: 0;
+	padding: 12px;
 }
 
 .panel > .head {
@@ -179,7 +180,11 @@ h1, h2 {
 	overflow: auto;
 }
 
-.panel > .stretch {
-	padding: 12px;
+.panel > .stretch > * {
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 
